@@ -20,6 +20,7 @@
   (setq dtk-default-language 'en)
   ;;; Full pathname of emacspeak-setup.el
   (load-file "/home/inoue/proj/bep/emacspeak/lisp/emacspeak-setup.el")
+  (require 'emacspeak-m17n-setup)
   ;;; Speech rate
   (dtk-set-rate 300 t)
   ;;; Play auditory-icon
